# zenvoy

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  guide.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  web-architecture.md
src/: export-window.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/cli/: commands.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/mcp/: instructions.rs  mod.rs  tools.rs
src-tauri/src/server/: auth.rs  middleware.rs  mod.rs  routes.rs
src-tauri/src/vault/: mod.rs  parse.rs  safepath.rs  types.rs
src-tauri/src/watcher/: mod.rs
src/app/: App.tsx  main-export.tsx  store.ts
src/app/components/: EditorPane.tsx  EmptyVault.tsx  HelpView.tsx  NoteList.tsx  ObsidianExcalidrawPrompt.tsx  OnboardingWizard.tsx  Preview.tsx  QuickCaptureApp.tsx  RemoteWorkspaceProfileModal.tsx  SettingsModal.test.ts  SettingsModal.tsx  Sidebar.tsx  TemplatePalette.tsx  TitleBar.tsx
src/app/lib/: app-update-state.test.ts  app-update-state.ts  cm-wikilinks.test.ts  commands.ts  diagram-renderers.ts  dnd.test.ts  editor-drops.test.ts  help.ts  palette-nav.ts  settings-search.test.ts  template-files.test.ts  vault-layout.ts
src/bridge/: bridge.ts  contract.ts  http-bridge.ts  ipc.ts  tauri-bridge.ts  templates.ts
src/shared/: builtin-templates.ts  demo-tour.ts  excalidraw.ts  ipc.ts  mcp-clients.ts  template-files.ts
src/styles/: index.css
