[package]
name = "zenvoy"
version = "1.0.0"
edition = "2021"
description = "Zenvoy — keyboard-first Markdown notes app"
license = "MIT"
default-run = "zenvoy"

[lib]
name = "zenvoy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "zenvoy"
path = "src/main.rs"

[[bin]]
name = "zenvoy-server"
path = "src/bin/server.rs"

[[bin]]
name = "zen"
path = "src/bin/cli.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header", "catch-panic"] }
http = "1"
notify = "6"
regex = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
subtle = "2"
clap = { version = "4", features = ["derive"] }
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-embed = "8"
mime_guess = "2"
base64 = "0.22"
csv = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
